<resources>
    <string name="app_name">AP Simulator</string>
    <string name="title_homepage">Homepage</string>
    <string name="button_continue">continue</string>
    <string name="button_start">start</string>
    <string name="title_game_enrollment">Enrollment</string>
    <string name="intro_enrollment">Select a student template</string>
    <string name="student_template_1">Bookworm</string>
    <string name="student_template_2">Artistic</string>
    <string name="student_template_3">Techie</string>
    <string name="student_template_4">Athlete</string>
    <string name="title_simulator">Simulator</string>
    <string name="literature">Literature</string>
    <string name="sciences">Sciences</string>
    <string name="sports">Sports</string>
    <string name="arts">Arts</string>
    <string name="gpa">GPA</string>
    <string name="preset_value">N/A</string>
    <string name="day">Day</string>
    <string name="button_restart">restart</string>
    <string name="title_final">The End</string>
    <string name="final_statement">You got offer from</string>
</resources>