<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

    <!-- 标题部分 -->
    <TextView
            android:text="@string/title_homepage"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:padding="12sp"/>

    <!-- 中间内容部分 -->
    <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/app_name"
            android:fontFamily="monospace"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"/> <!-- 设置layout_weight为1 -->

    <!-- 按钮部分（固定在底部） -->
    <Button
            android:text="@string/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/continueButton"/>
</LinearLayout>
