<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

    <!-- 标题部分 -->
    <TextView
            android:text="@string/title_final"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:padding="12sp"/>

    <!-- 中间内容部分 -->

    <TextView
            android:text="@string/preset_value"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result_text"
            android:layout_below="@+id/page_title"
            android:padding="12sp"/>

    <TextView
            android:text="@string/title_final"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/color_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:padding="12sp"/>

    <!-- 按钮部分 (固定在底部) -->
    <Button
            android:text="@string/button_restart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restartButton"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>
